# autotraders

./: .gitignore  CHANGELOG.md  LICENSE  README.md  import_for_test.py  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  python-package.yml  python-publish.yml
autotraders/: __init__.py  agent.py  contract.py  error.py  faction.py  marketplace.py  paginated_list.py  session.py  ship.py  ships.py  shipyard.py  space_traders_entity.py  status.py  survey.py  system.py  time.py  token.py  transaction.py  util.py  version.py  waypoint.py
autotraders/faction/: __init__.py  contract.py
autotraders/map/: system.py  waypoint.py
autotraders/map/waypoint_types/: __init__.py  construction.py  jumpgate.py  marketplace.py  shipyard.py
autotraders/shared_models/: item.py  item_progress.py  map_symbol.py  ship_symbol.py  symbol.py  system_symbol.py  trait.py  transaction.py  waypoint_symbol.py
autotraders/ship/: __init__.py  cargo.py  cooldown.py  fuel.py  nav.py  ship_components.py  states.py  survey.py
autotraders/waypoint_types/: jumpgate.py  marketplace.py  shipyard.py
source/: api.rst  conf.py  index.rst  notes.rst  quickstart.rst  usage_notes.rst
source/api/: autotraders.faction.rst  autotraders.map.rst  autotraders.map.waypoint_types.rst  autotraders.rst  autotraders.ship.rst  modules.rst
tests/: test_contract.py  test_init.py  test_map.py  test_ship.py  test_util.py
