[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autotraders"
version = "1.3.1"
authors = [
  { name="Ashwin Naren", email="arihant2math@gmail.com" },
]
description = "A powerful spacetraders API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.20",
    "requests-ratelimiter >=0.4"
]

[tool.setuptools.packages.find]
include = ["autotraders*"]
exclude = ["source*", "tests*", "venv*"]

[project.urls]
"Homepage" = "https://arihant2math.github.io/autotraders/"
"Documentation" = "https://arihant2math.github.io/autotraders/"
"Bug Tracker" = "https://github.com/arihant2math/autotraders/issues"

