[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autotraders"
authors = [
    { name = "Ashwin Naren", email = "arihant2math@gmail.com" },
]
description = "A powerful spacetraders API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.20",
    "requests-ratelimiter>=0.4"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["autotraders*"]
exclude = ["source*", "tests*", "venv*"]

[tool.setuptools.dynamic]
version = { attr = "autotraders.__version__" }

[project.urls]
"Homepage" = "https://arihant2math.github.io/autotraders/"
"Documentation" = "https://arihant2math.github.io/autotraders/"
"Bug Tracker" = "https://github.com/arihant2math/autotraders/issues"

