[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autotraders"
authors = [
    { name = "Ashwin Naren", email = "arihant2math@gmail.com" },
]
description = "A powerful spacetraders API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 4 - Beta",
    "Topic :: Internet",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.20",
    "requests-ratelimiter>=0.4"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["autotraders*"]
exclude = ["source*", "tests*", "venv*"]

[tool.setuptools.dynamic]
version = { attr = "autotraders.__version__" }

[project.urls]
"Homepage" = "https://comsictraders.github.io/autotraders/"
"Repository" = "https://github.com/comsictraders/autotraders.git"
"Changelog" = "https://github.com/comsictraders/autotraders/blob/master/CHANGELOG.md"
"Documentation" = "https://comsictraders.github.io/autotraders/"
"Bug Tracker" = "https://github.com/comsictraders/autotraders/issues"
